--- a/Source/TimingForTobyUI.csproj
+++ b/Source/TimingForTobyUI.csproj
@@ -74,7 +74,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="RaceData.cs" />
+    <Compile Include="CommonSQL.cs" />
     <Compile Include="KeybordTimer.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
