Added Filter.cs class

--- a/Source/TimingForTobyUI.csproj
+++ b/Source/TimingForTobyUI.csproj
@@ -74,6 +74,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Filter.cs" />
     <Compile Include="RaceData.cs" />
     <Compile Include="CommonSQL.cs" />
     <Compile Include="KeybordTimer.cs" />
