--- a/Source/TimingForTobyUI.csproj
+++ b/Source/TimingForTobyUI.csproj
@@ -77,6 +77,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Filter.cs" />
+    <Compile Include="NewFilterBuilder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewFilterBuilder.Designer.cs">
+      <DependentUpon>NewFilterBuilder.cs</DependentUpon>
+    </Compile>
     <Compile Include="ITimerListener.cs" />
     <Compile Include="LogFile.cs" />
     <Compile Include="ProgressReport.cs" />
@@ -115,6 +121,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimingDevice.cs" />
+    <EmbeddedResource Include="NewFilterBuilder.resx">
+      <DependentUpon>NewFilterBuilder.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
